# hakflow

./: LICENSE  hakflow.cabal
Hakflow/: Abstraction.hs  Commands.hs  Magma.hs  Makeflow.hs  Monad.hs  Util.hs
Hakflow/Abstraction/: Map.hs
Hakflow/Commands/: Cat.hs  Mv.hs  Rm.hs
Hakflow/Instances/: Vector.hs
tests/: Abstraction.hs  Magma.hs  Monad.hs
tests/Commands/: Cat.hs
