name:                hakflow
version:             0.0
synopsis:            <Project description>
description:         <Project description>
category:            System
license:             BSD3
license-file:        LICENSE
author:              Author Name
maintainer:          user@email.address
build-type:          Simple
cabal-version:       >= 1.6


Library
  build-depends:       base, prelude-plus, vector, text, containers, data-default, fclabels, monads-fd
  exposed-modules:     Hakflow.Abstraction,
                       Hakflow.Abstraction.Map,
                       Hakflow.Commands.Cat,
                       Hakflow.Magma,
                       Hakflow.Makeflow,
                       Hakflow.Monad,
                       Hakflow.Util

  ghc-options:
  Extensions: NoImplicitPrelude
